--- a/Frontend-PI/Views/Publication/Details.cshtml
+++ b/Frontend-PI/Views/Publication/Details.cshtml
@@ -1,14 +1,13 @@
-﻿@model IEnumerable<Frontend_PI.Models.Publication>
+﻿@model Frontend_PI.Models.Publication
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Details";
 }
 
-
 <!--************************************
-        Inner Banner Start
-*************************************-->
-<div class="tg-innerbanner tg-haslayout tg-parallax tg-bginnerbanner" data-z-index="-100" data-appear-top-offset="600" data-parallax="scroll" data-image-src="images/parallax/bgparallax-07.jpg">
+            Inner Banner Start
+    *************************************-->
+<div class="tg-innerbanner tg-haslayout tg-parallax tg-bginnerbanner" data-z-index="-100" data-appear-top-offset="600" data-parallax="scroll" data-image-src="~/Content/images/parallax/bgparallax-07.jpg">
     <div class="container">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
@@ -16,7 +15,8 @@
                     <h1>News &amp; Articles</h1>
                     <ol class="tg-breadcrumb">
                         <li><a href="javascript:void(0);">home</a></li>
-                        <li class="tg-active">News</li>
+                        <li><a href="javascript:void(0);">news</a></li>
+                        <li class="tg-active">News Title Here</li>
                     </ol>
                 </div>
             </div>
@@ -37,45 +37,128 @@
         <div class="container">
             <div class="row">
                 <div id="tg-twocolumns" class="tg-twocolumns">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <figure class="tg-newsdetailimg">
+                            <img src="@Html.DisplayNameFor(model => model.image)" alt="image description">
+                            <figcaption class="tg-author">
+                                <img src="~/Content/images/author/imag-26.jpg" alt="image description">
+                                <div class="tg-authorinfo">
+                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">Angela Gunning</a></span>
+                                    <ul class="tg-postmetadata">
+                                        <li><a href="javascript:void(0);"><i class="fa fa-comment-o"></i><i>21,415 Comments</i></a></li>
+                                        <li><a href="javascript:void(0);"><i class="fa fa-eye"></i><i>24,565 Views</i></a></li>
+                                    </ul>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </div>
                     <div class="col-xs-12 col-sm-8 col-md-8 col-lg-9 pull-right">
                         <div id="tg-content" class="tg-content">
-                            <div class="tg-newslist">
-                                <div class="tg-sectionhead">
-                                    <h2><span>Latest News &amp; Articles</span>What's Hot in The News</h2>
+                            <div class="tg-newsdetail">
+                                <ul class="tg-bookscategories">
+                                    <li><a href="javascript:void(0);">Adventure</a></li>
+                                    <li><a href="javascript:void(0);">Fun</a></li>
+                                </ul>
+                                <div class="tg-themetagbox"><span class="tg-themetag">featured</span></div>
+                                <div class="tg-posttitle">
+                                    <h3><a href="javascript:void(0);">@Html.DisplayFor(model => model.title)</a></h3>
                                 </div>
-                                <button class="btn btn-default" style="float: right;">
-                                    @Html.ActionLink("Express Your Thoughts", "Create")
-                                </button>
-                                <div class="row">
-                                    @foreach (var item in Model)
-                                    {
-                                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                            <article class="tg-post">
-                                                <figure><a href="javascript:void(0);"><img src="@Html.DisplayFor(modelItem => item.image)" alt="image description"></a></figure>
-                                                <div class="tg-postcontent">
-                                                    <ul class="tg-bookscategories">
-                                                        <li><a href="javascript:void(0);">Adventure</a></li>
-                                                        <li><a href="javascript:void(0);">Fun</a></li>
-                                                    </ul>
-                                                    <div class="tg-themetagbox"><span class="tg-themetag">featured</span></div>
-                                                    <div class="tg-posttitle">
-                                                        <h3><a href="javascript:void(0);">@Html.DisplayFor(modelItem => item.title)</a></h3>
+                                <div class="tg-description">
+                                    <p>@Html.DisplayFor(model => model.content)</p>
+                                </div>
+                                <div class="tg-tagsshare">
+                                    <div class="tg-tags">
+                                        <span>Tags:</span>
+                                        <div class="tg-tagholder">
+                                            <a class="tg-tag" href="javascript:void(0);">Wealth</a>
+                                            <a class="tg-tag" href="javascript:void(0);">Profit Making</a>
+                                            <a class="tg-tag" href="javascript:void(0);">Cash</a>
+                                            <a class="tg-tag" href="javascript:void(0);">Planning</a>
+                                        </div>
+                                    </div>
+                                    <div class="tg-socialshare">
+                                        <span>Share:</span>
+                                        <ul class="tg-socialicons">
+                                            <li class="tg-facebook"><a href="javascript:void(0);"><i class="fa fa-facebook"></i></a></li>
+                                            <li class="tg-twitter"><a href="javascript:void(0);"><i class="fa fa-twitter"></i></a></li>
+                                            <li class="tg-linkedin"><a href="javascript:void(0);"><i class="fa fa-linkedin"></i></a></li>
+                                            <li class="tg-googleplus"><a href="javascript:void(0);"><i class="fa fa-google-plus"></i></a></li>
+                                            <li class="tg-rss"><a href="javascript:void(0);"><i class="fa fa-rss"></i></a></li>
+                                            <li class="tg-twitter"><a href="javascript:void(0);"><i class="fa fa-twitter"></i></a></li>
+                                            <li class="tg-linkedin"><a href="javascript:void(0);"><i class="fa fa-linkedin"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="tg-authorbox">
+                                    <figure class="tg-authorimg">
+                                        <img src="~/Content/images/author/imag-24.jpg" alt="image description">
+                                    </figure>
+                                    <div class="tg-authorinfo">
+                                        <div class="tg-authorhead">
+                                            <div class="tg-leftarea">
+                                                <div class="tg-authorname">
+                                                    <h2>@Html.DisplayFor(model => model.user.firstName) @Html.DisplayFor(model => model.user.lastName)</h2>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <a class="tg-btn tg-active" href="javascript:void(0);">View All Books</a>
+                                    </div>
+                                </div>
+                                <div class="tg-commentsarea">
+                                    <ul id="tg-comments" class="tg-comments">
+                                        <li>
+                                            <div class="tg-authorbox">
+                                                <figure class="tg-authorimg">
+                                                    <img src="~/Content/images/author/imag-24.jpg" alt="image description">
+                                                </figure>
+                                                <div class="tg-authorinfo">
+                                                    <div class="tg-authorhead">
+                                                        <div class="tg-leftarea">
+                                                            <div class="tg-authorname">
+                                                                <h2>Kathrine Culbertson</h2>
+                                                                <span>Author Since: June 27, 2017</span>
+                                                            </div>
+                                                        </div>
+                                                        <div class="tg-rightarea">
+                                                            <a class="tg-btnreply" href="javascript:void(0);">Reply<i class="fa fa-mail-reply"></i></a>
+                                                        </div>
                                                     </div>
                                                     <div class="tg-description">
-                                                        <p> @Html.DisplayFor(modelItem => item.content) <a href="javascript:(0);"> <br><br>More</a></p>
+                                                        <p>Laborum sed ut perspiciatis unde omnis iste natus sit voluptatem accusantium doloremque laudantium totam rem aperiam eaque ipsa quae ab illo inventore veritatis etation.</p>
                                                     </div>
-                                                    <span class="tg-bookwriter">By: <a href="javascript:void(0);">@Html.DisplayFor(modelItem => item.user.firstName) @Html.DisplayFor(modelItem => item.user.lastName)</a></span>
-                                                    <ul class="tg-postmetadata">
-                                                        <li><a href="javascript:void(0);"><i class="fa fa-comment-o"></i><i>21,415 Comments</i></a></li>
-                                                        <li><a href="javascript:void(0);"><i class="fa fa-eye"></i><i>@Html.DisplayFor(modelItem => item.nbLike)</i></a></li>
-                                                        <li><a href="javascript:void(0);"><i class="fa fa-eye"></i><i>@Html.DisplayFor(modelItem => item.nbDisLike)</i></a></li>
-
-                                                    </ul>
                                                 </div>
-                                            </article>
-                                        </div>
-                                    }
+                                                <div class="tg-bottomarrow"></div>
+                                            </div>  
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="tg-leaveyourcomment">
+                                    <div class="tg-sectionhead">
+                                        <h2>Leave Your Comment</h2>
                                     </div>
+                                    <form class="tg-formtheme tg-formleavecomment">
+                                        <fieldset>
+                                            <div class="form-group">
+                                                <input type="text" name="full name" class="form-control" placeholder="First Name*">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="text" name="last name" class="form-control" placeholder="Last Name*">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="email" name="email address" class="form-control" placeholder="Email*">
+                                            </div>
+                                            <div class="form-group">
+                                                <input type="text" name="subject" class="form-control" placeholder="Subject (optional)">
+                                            </div>
+                                            <div class="form-group">
+                                                <textarea placeholder="Comment"></textarea>
+                                            </div>
+                                            <div class="form-group">
+                                                <a class="tg-btn tg-active" href="javascript:void(0);">Submit</a>
+                                            </div>
+                                        </fieldset>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
