--- a/Frontend-PI/Content/main.css
+++ b/Frontend-PI/Content/main.css
@@ -22,7 +22,7 @@
 /* =============================================
 			Theme Reset Style					
 ============================================= */
-@import url(../../../css.css);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Playfair+Display:400,700|Work+Sans:300,400,500,600,700);
 * {
 	margin: 0px;
 	padding: 0px;
