--- a/Frontend-PI/Views/User/ResetPassword.cshtml
+++ b/Frontend-PI/Views/User/ResetPassword.cshtml
@@ -4,8 +4,12 @@
     ViewBag.Title = "ResetPassword";
 }
 
-<h2>ResetPassword</h2>
-
+<h2>
+    Retrouvez votre compte
+</h2>
+<h5>
+    Veuillez entrer votre pseudo pour rechercher votre compte.
+</h5>
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
