--- a/Frontend-PI/Views/Shared/_LoginPartial.cshtml
+++ b/Frontend-PI/Views/Shared/_LoginPartial.cshtml
@@ -11,10 +11,13 @@
             @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
             -->
         <div class="tg-userlogin">
-            <figure><a href="javascript:void(0);"><img src="~/Content/images/users/img-01.jpg" alt="image description"></a></figure>
+            <figure>
+                <a href="javascript:void(0);"><img src="~/Content/images/users/img-01.jpg" alt="image description"></a>
+            </figure>
             <span>
                 Hi,
-                @Session["Username"]
+                @Html.ActionLink(Session["Username"].ToString(), "UpdateUser", "User", routeValues: null, htmlAttributes: new { id = "registerLink" })
+
             </span>
         </div>
 
