--- a/Frontend-PI/Views/User/UpdatePassword.cshtml
+++ b/Frontend-PI/Views/User/UpdatePassword.cshtml
@@ -4,12 +4,15 @@
     ViewBag.Title = "UpdatePassword";
 }
 
-<h2>UpdatePassword</h2>
+<h2>Modification du mot de passe</h2>
 
-@using (Html.BeginForm()) 
+
+<h5>Entrer le code de confirmation reçu par mail pour modifier votre mot de passe</h5>
+
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>User</h4>
         <hr />
@@ -18,7 +21,7 @@
 
 
 
-  
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -37,7 +40,8 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.confirmCode, htmlAttributes: new { @class = "control-label col-md-2" })
+            <label class="control-label col-md-2" for="confirmCode">Code de confirmation</label>
+
             <div class="col-md-10">
                 @Html.EditorFor(model => model.confirmCode, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.confirmCode, "", new { @class = "text-danger" })
@@ -52,6 +56,4 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
