--- a/Frontend-PI/Views/User/Index.cshtml
+++ b/Frontend-PI/Views/User/Index.cshtml
@@ -1,1 +1,82 @@
-﻿
+﻿@model IEnumerable<Frontend_PI.Models.User>
+
+@{
+    ViewBag.Title = "Index";
+}
+
+<h2>Index</h2>
+
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.firstName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.lastName)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.email)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.username)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.confirmed)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.blocked)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.blockedDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.banned)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.userRole)
+        </th>
+        <th></th>
+    </tr>
+
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.firstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.lastName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.username)
+        </td>
+         <td>
+            @Html.DisplayFor(modelItem => item.confirmed)
+        </td>
+
+        <td>
+            @Html.DisplayFor(modelItem => item.blocked)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.blockedDate)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.banned)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.userRole)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit","User", new { id=item.id }, null) |
+            @Html.ActionLink("Details", "Details", "User", new { id=item.id }, null) |
+            @Html.ActionLink("Delete", "Delete", "User", new { id=item.id }, null)
+        </td>
+    </tr>
+}
+
+</table>
