--- a/Frontend-PI/Views/Shared/_Layout.cshtml
+++ b/Frontend-PI/Views/Shared/_Layout.cshtml
@@ -73,13 +73,13 @@
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Skander</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <li>
-                            <a href="#">Page 1</a>
+                            <a href="/commande/index">List Commandes</a>
                         </li>
                         <li>
-                            <a href="#">Page 2</a>
+                            <a href="/commande">List Command By User</a>
                         </li>
                         <li>
-                            <a href="#">Page 3</a>
+                            <a href="/feedback/index">FeedBack</a>
                         </li>
                     </ul>
                 </li>
@@ -87,13 +87,13 @@
                     <a href="#pageSubmenu1" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Aymen</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu1">
                         <li>
-                            <a href="#">Page 1</a>
+                            <a href="/user/index">liste des utilisateurs</a>
                         </li>
                         <li>
-                            <a href="#">Page 2</a>
+                            <a href="#">Filtre par utilisateur</a>
                         </li>
                         <li>
-                            <a href="#">Page 3</a>
+                            <a href="#">Stats User</a>
                         </li>
                     </ul>
                 </li>
@@ -115,10 +115,10 @@
                     <a href="#pageSubmenu3" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Ahmed Karoui</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu3">
                         <li>
-                            <a href="#">Page 1</a>
+                            <a href="/comment">Page 1</a>
                         </li>
                         <li>
-                            <a href="#">Page 2</a>
+                            <a href="/publication">Page 2</a>
                         </li>
                         <li>
                             <a href="#">Page 3</a>
