fixed crud errors

--- a/Frontend-PI/Views/Shared/_Layout.cshtml
+++ b/Frontend-PI/Views/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
                             <a href="/comment">Page 1</a>
                         </li>
                         <li>
-                            <a href="/publication">Page 2</a>
+                            <a href="/publication/IndexAdmin">Social Network Management</a>
                         </li>
                         <li>
                             <a href="#">Page 3</a>
