--- a/Frontend-PI/Views/Publication/Edit.cshtml
+++ b/Frontend-PI/Views/Publication/Edit.cshtml
@@ -26,6 +26,16 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.validated, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.validated)
+                    @Html.ValidationMessageFor(model => model.validated, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.image, new { htmlAttributes = new { @class = "form-control" } })
