--- a/Frontend-PI/Views/Commande/Index.cshtml
+++ b/Frontend-PI/Views/Commande/Index.cshtml
@@ -54,7 +54,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.id , reference = item.reference }) |
             @Html.ActionLink("Delete", "Delete", new { id = item.id })
         </td>
     </tr>
