--- a/Frontend-PI/Views/Product/Index.cshtml
+++ b/Frontend-PI/Views/Product/Index.cshtml
@@ -29,15 +29,30 @@
                 @Html.ActionLink("Delete", "Delete", new { id = item.id })
             </td>
             <td>
-                <label>Quantity</label>
-                <input id="@Html.DisplayFor(modelItem => item.id)qty" class="form-control qte" name="qte" />
-                <button id=" @Html.DisplayFor(modelItem => item.id)" class="btn btn-primary add-to-list">Add to list</button>
-
+                <input id="@Html.DisplayFor(modelItem => item.id)qty" class="form-control qte" name="qte" placeholder="Quantity" style="width: 113px;display: inherit;margin-right: 25px;" type="number" />
+                <span id=" @Html.DisplayFor(modelItem => item.id)" style="cursor: pointer;" class="glyphicon glyphicon-shopping-cart add-to-list" data-toggle="modal" data-target="#exampleModal"></span>
             </td>
         </tr>
     }
 
 </table>
+<center><a href="~/Product/CommandeDetails"><button>Valider</button></a></center>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Notification panier</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Votre produit a été ajouté au panier
+            </div>
+        </div>
+    </div>
+</div>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script>
 
@@ -47,6 +62,10 @@
         var idclicked = $(this).attr('id');
         var qtyValue = $("#"+idclicked+"qty").val();
 
+        $(this).attr("disabled", "disabled");
+        $(this).css("pointer-events", "none");
+        $("#" + idclicked + "qty").attr("disabled", "disabled");
+
         alert(qtyValue);
 
         $.ajax({
@@ -54,15 +73,15 @@
             url: '@Url.Action("Remplissage")',
             data: '{id: ' + JSON.stringify(idclicked) + ',qty:' + JSON.stringify(qtyValue)+'}',
             dataType: "json",
-            contentType: "application/json; charset=utf-8",  
+            contentType: "application/json; charset=utf-8",
             success: function (response) {
                 console.log(response);
-                 alert("Data has been added successfully.");  
+                 alert("Data has been added successfully.");
                 //LoadData();
             },
             error: function () {
                 alert("Error while inserting data");
-            }  
+            }
 
 
         })
