--- a/Frontend-PI/Views/User/statLockUnlockUser.cshtml
+++ b/Frontend-PI/Views/User/statLockUnlockUser.cshtml
@@ -13,7 +13,7 @@
 				fontSize: 21
 			},
 			data: [{
-				type: "pie",
+                type: "pie", // "bar" , "pie","doughnut","bubble","funnel","scatter","pyramid", "stackedColumn"
 				startAngle: 160,
 				toolTipContent: "<b>{label}</b>: {y}%",
 				indexLabel: "{label} - {y}%",
