--- a/Frontend-PI/Views/Publication/IndexAdmin.cshtml
+++ b/Frontend-PI/Views/Publication/IndexAdmin.cshtml
@@ -36,7 +36,7 @@
     </tr>
 
 @foreach (var item in Model) {
-    <tr>
+    <tr class="table-condensed info">
         <td>
             @Html.DisplayFor(modelItem => item.content)
         </td>
