--- a/Frontend-PI/Views/Commande/Details.cshtml
+++ b/Frontend-PI/Views/Commande/Details.cshtml
@@ -6,40 +6,53 @@
 
 <h2>Details</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            Nom du produit
-        </th>
-        <th>
-            Réference commande
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.qte)
-        </th>
-        <th></th>
-    </tr>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h3>Réference commande @Session["referenceOrder"].ToString()</h3>
+        </div>
+        <div class="col text-center" style="">
+            <h2><span style="color:green;cursor:pointer" class="glyphicon glyphicon-print" onclick="DownloadPDF();"></span></h2>
+        </div>
+     </div>
+</div>
+    <table class="table">
+        <tr>
+            <th>
+                Nom du produit
+            </th>
+            <th>
+                Quantité
+            </th>
+            <th>
+                Addition prix
+            </th>
+        </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Frontend_PI.Controllers.ProductController.show(@item.idProduct)
-        </td>
-        <td>
-            @Session["referenceOrder"].ToString()
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.qte)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
-        </td>
-    </tr>
-}
-
-</table>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Frontend_PI.Controllers.ProductController.show(@item.idProduct, "", 1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.qte)
+                </td>
+                <td>
+                    @Frontend_PI.Controllers.ProductController.show(@item.idProduct, "price", @item.qte)<span class="glyphicon glyphicon-usd"></span>
+                </td>
+            </tr>
+        }
+        <tr style="background-color:antiquewhite">
+            <th id="total" colspan="3" style="color : green">Total :</th>
+            <td style="color : red;font:italic">@Frontend_PI.Controllers.ProductController.sumPriceProduct<span class="glyphicon glyphicon-usd"></span></td>
+        </tr>
+    </table>
+    <script>
+    DownloadPDF = function () {
+        $.ajax({
+            url: '@Url.Action("downloadFacture")' ,
+            type: "POST"
+        });
+    }
+    </script>
