--- a/Frontend-PI/Views/Shared/_Layout.cshtml
+++ b/Frontend-PI/Views/Shared/_Layout.cshtml
@@ -121,7 +121,7 @@
                             <a href="/comment">Comment Management</a>
                         </li>
                         <li>
-                            <a href="#">statistics</a>
+                            <a href="Publication/statpublication">statistics</a>
                         </li>
                     </ul>
                 </li>
