--- a/Frontend-PI/Views/User/Details.cshtml
+++ b/Frontend-PI/Views/User/Details.cshtml
@@ -11,7 +11,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.firstName)
+            @Html.DisplayName("Prenom")
         </dt>
 
         <dd>
@@ -19,7 +19,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.lastName)
+            @Html.DisplayName("Nom")
         </dt>
 
         <dd>
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.email)
+            @Html.DisplayName("Email")
         </dt>
 
         <dd>
@@ -35,7 +35,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.username)
+            @Html.DisplayName("Nom d'utilisateur")
         </dt>
 
         <dd>
@@ -43,63 +43,38 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.password)
+            @Html.DisplayName("Mot de passe")
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.password)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.confirmCode)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.confirmCode)
-        </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.confirmed)
+            @Html.DisplayName("Confirmer")
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.confirmed)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.wrongPassword)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.wrongPassword)
-        </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.blocked)
+            @Html.DisplayName("blocké")
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.blocked)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.blockedDate)
-        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.blockedDate)
-        </dd>
+
+
 
         <dt>
-            @Html.DisplayNameFor(model => model.banned)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.banned)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.userRole)
+            @Html.DisplayName("Role")
         </dt>
 
         <dd>
