--- a/Frontend-PI/Views/User/ConfirmUser.cshtml
+++ b/Frontend-PI/Views/User/ConfirmUser.cshtml
@@ -18,7 +18,7 @@
  
 
         <div class="form-group">
-            @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Nom d'utilisateur", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
@@ -28,7 +28,7 @@
   
 
         <div class="form-group">
-            @Html.LabelFor(model => model.confirmCode, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.Label("Code de confirmation", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.confirmCode, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.confirmCode, "", new { @class = "text-danger" })
