--- a/Frontend-PI/Views/User/Create.cshtml
+++ b/Frontend-PI/Views/User/Create.cshtml
@@ -22,7 +22,7 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(model => model.firstName, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Prenom", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.firstName, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.firstName, "", new { @class = "text-danger" })
@@ -30,7 +30,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.lastName, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Nom", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.lastName, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.lastName, "", new { @class = "text-danger" })
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Email", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
@@ -46,7 +46,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Nom d'utilisateur", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.password, htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.Label("Mot de passe", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.PasswordFor(model => model.password, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.password, "", new { @class = "text-danger" })
