--- a/Frontend-PI/Views/Shared/_Layout.cshtml
+++ b/Frontend-PI/Views/Shared/_Layout.cshtml
@@ -58,13 +58,13 @@
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Nômen</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
-                            <a href="#">Home 1</a>
+                            <a href="/Category/Index">Category Manager</a>
                         </li>
                         <li>
-                            <a href="#">Home 2</a>
+                            <a href="/Product/Index">Product Manager</a>
                         </li>
                         <li>
-                            <a href="#">Home 3</a>
+                            <a href="/Stock/Index">Stock Manager</a>
                         </li>
                     </ul>
                 </li>
