deliveryMan front end work

--- a/Frontend-PI/Views/DeliveryMan/AffecterCommandeLivreur.cshtml
+++ b/Frontend-PI/Views/DeliveryMan/AffecterCommandeLivreur.cshtml
@@ -1,14 +1,17 @@
-﻿@model IEnumerable<Frontend_PI.Models.Commande>
+﻿
+@model IEnumerable<Frontend_PI.Models.Commande>
+
 <script src="~/Scripts/jquery-3.4.1.min.js"></script>
 <script type="text/javascript">
 
     $(document).ready(function () {
 
 
-        $(".btn-info").click(function () {
+        $("#suppButton").click(function () {
 
             if (confirm('vous souhaitez confirmer ?')) {
-                //  alert(@ViewBag.idLivreur);
+                alert(@ViewBag.idLivreur);
+                 alert(@ViewBag.idCommande);
                 //alert($(this).prop('name'))
                 supprimerAffectation($(this).prop('name'),@ViewBag.idLivreur);
             }
@@ -36,6 +39,7 @@
             })
             ,
             success: function (data) {
+                alert(data)
                 location.reload();
 
             },
@@ -53,32 +57,17 @@
     ViewBag.Title = "CommandeByDeliveryMan";
 }
 
+
+
 <h2>liste des commandes  </h2>
 <h4> @ViewBag.stat.first_name</h4>
-<div>
-
-    <a class="btn btn-default" style="float:right" href="/DeliveryMan" role="button">Retourner a la liste</a>
-</div>
 <hr />
-
-
-
-<div s>
-  
-
-    <a class="btn btn-default" style="float:left;background-color:floralwhite" href="/DeliveryMan/AffecterCommande" role="button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" color="blue" class="bi bi-brush" viewBox="0 0 16 16">
-            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-        </svg>
-        Affecter des commande !
-    </a>
-</div>
 
 
 @if (Model != null)
 {
     <table class="table">
-        <tr class="bg-info">
+        <tr>
             <th>
                 @Html.DisplayNameFor(model => model.reference)
             </th>
@@ -155,7 +144,6 @@
                         </button>
 
 
-
                     </td>
                 }
 
@@ -197,12 +185,9 @@
 
 @if (Model == null)
 {
-
-    <table>
-        <tr>
-            <td class="bg-info"><p style="color:antiquewhite;font-weight:bolder">Ce livreur n'a pas encore de commandes à livrer</p> </td>
-        </tr>
-    </table>
+    <p> ce livreur n'a pas encore des livraisons a livré </p>
 
 }
-
+<div>
+    @Html.ActionLink("Retourner a la liste", "Index")
+</div>
