--- a/Frontend-PI/Views/DM/ListAffect.cshtml
+++ b/Frontend-PI/Views/DM/ListAffect.cshtml
@@ -7,10 +7,9 @@
 
         $(".btn-info").click(function () {
 
-            if (confirm('vous souhaitez confirmer ?')) {
-                //  alert(@ViewBag.idLivreur);
-                //alert($(this).prop('name'))
-                supprimerAffectation($(this).prop('name'),@ViewBag.idLivreur);
+            if (confirm('vous souhaitez confirmer la livraison de la Commande  ?')) {
+
+                validerLivraison(@ViewBag.Livreur.id, $(this).prop('name'), $(this).prop('value'));
             }
 
         });
@@ -20,28 +19,59 @@
     }
     );
 
-    function supprimerAffectation(idc, idl) {
+    function validerLivraison(idl,idC,ref) {
 
         $.ajax({
             async: true,
             type: 'POST',
             dataType: 'JSON',
             contentType: 'application/json;charset=utf-8',
-            url: '/DeliveryMan/SupprimerAffectation/',
+            url: '/DM/ValiderLivraison/',
             data: JSON.stringify({
-                idCommande: idc,
+                idCommande: idC,
                 idLivreur: idl
 
 
             })
             ,
             success: function (data) {
-                location.reload();
+                debugger;
+
+                sendEmail(ref);
 
             },
             error: function (err) {
 
                 alert(err + "un erreur a été survenu veuillez contactez votre administrateur ");
+            }
+
+
+        })
+    }
+
+    function sendEmail(name) {
+        debugger;
+      
+        $.ajax({
+           // async: true,
+            type: 'POST',
+           // dataType: 'JSON',
+           // contentType: 'application/json;charset=utf-8',
+            url: "http://localhost:3000/send",
+            data: {
+                "ref": name
+             
+
+            }
+            ,
+            success: function (data) {
+                location.reload();
+
+            },
+            error: function (err) {
+                debugger;
+                location.reload();
+                // alert(err + "un erreur a été survenu veuillez contactez votre administrateur ");
             }
 
 
@@ -53,26 +83,10 @@
     ViewBag.Title = "CommandeByDeliveryMan";
 }
 
-<h2>liste des commandes  </h2>
-<h4> @ViewBag.stat.first_name</h4>
-<div>
-
-    <a class="btn btn-default" style="float:right" href="/DeliveryMan" role="button">Retourner a la liste</a>
-</div>
+<h2>Mes Commandes</h2>
+<h4>Livreur :  @ViewBag.Livreur.firstName  @ViewBag.Livreur.lastName</h4>
+<h4>Adresse :  @ViewBag.Livreur.adresse  Code Postal : @ViewBag.Livreur.codePostal</h4>
 <hr />
-
-
-
-<div s>
-  
-
-    <a class="btn btn-default" style="float:left;background-color:floralwhite" href="/DeliveryMan/AffecterCommande" role="button">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" color="blue" class="bi bi-brush" viewBox="0 0 16 16">
-            <path d="M8 0a8 8 0 1 1 0 16A8 8 0 0 1 8 0zM4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H4.5z" />
-        </svg>
-        Affecter des commande !
-    </a>
-</div>
 
 
 @if (Model != null)
@@ -146,17 +160,20 @@
                 }
                 else
                 {
-                    <td>
-                        <button class="btn btn-info" role="button" id="suppButton" name=@item.id>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" color="red" fill="currentColor" class="bi bi-x-octagon-fill" viewBox="0 0 16 16">
-                                <path d="M11.46.146A.5.5 0 0 0 11.107 0H4.893a.5.5 0 0 0-.353.146L.146 4.54A.5.5 0 0 0 0 4.893v6.214a.5.5 0 0 0 .146.353l4.394 4.394a.5.5 0 0 0 .353.146h6.214a.5.5 0 0 0 .353-.146l4.394-4.394a.5.5 0 0 0 .146-.353V4.893a.5.5 0 0 0-.146-.353L11.46.146zm-6.106 4.5L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708z" />
-                            </svg>
-                            <!-- @Html.ActionLink("Supprimer", "SupprimerAffectation", new { id = item.id })-->
-                        </button>
+            <td>
+
+               
+
+                <button class="btn btn-info" role="button" id="confirmButton" name=@item.id value="@item.reference">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" color="green" fill="currentColor" class="bi bi-basket3-fill" viewBox="0 0 16 16">
+                        <path d="M5.757 1.071a.5.5 0 0 1 .172.686L3.383 6h9.234L10.07 1.757a.5.5 0 1 1 .858-.514L13.783 6H15.5a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6h1.717L5.07 1.243a.5.5 0 0 1 .686-.172zM2.468 15.426.943 9h14.114l-1.525 6.426a.75.75 0 0 1-.729.574H3.197a.75.75 0 0 1-.73-.574z" />
+                    </svg>
+
+                </button>
 
 
 
-                    </td>
+            </td>
                 }
 
             </tr>
@@ -164,45 +181,9 @@
 
 
     </table>
-    <h3 style="text-decoration:underline;color:darkolivegreen">Statistique de livreur</h3>
-    <table class="table">
-        <tr>
-            <th>
-                Nombre de commande affectées
-            </th>
-            <th>
-                Nombre de commande livrées
-            </th>
-
-
-
-        </tr>
-
-
-        <tr>
-            <td>
-                @ViewBag.stat.total_orders
-            </td>
-            <td>
-                @ViewBag.stat.orders_delivered
-            </td>
-
-
-        </tr>
-
-
-    </table>
-
 }
 
-@if (Model == null)
-{
-
-    <table>
-        <tr>
-            <td class="bg-info"><p style="color:antiquewhite;font-weight:bolder">Ce livreur n'a pas encore de commandes à livrer</p> </td>
-        </tr>
-    </table>
-
-}
-
+<div>
+    @Html.ActionLink("Retourner a la liste", "Index")
+</div>
+   
