--- a/Frontend-PI/Views/DeliveryMan/AffecterLivreurExecute.cshtml
+++ b/Frontend-PI/Views/DeliveryMan/AffecterLivreurExecute.cshtml
@@ -1,68 +1,132 @@
 ﻿@model IEnumerable<Frontend_PI.Models.DeliveryMan>
 
+<script src="~/Scripts/jquery-3.4.1.min.js"></script>
+<script type="text/javascript">
 
-<span><h2>Recherche Optimisée  </h2></span>
+    $(document).ready(function () {
 
-<h4> liste des livreur proposé pour livrer la commande : @ViewBag.refer</h4>
-<svg xmlns="http://www.w3.org/2000/svg" color="green" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+
+        $(".btn-info").click(function () {
+            debugger;
+            if (confirm('vous souhaitez confirmer ?')) {
+
+                affecter(@ViewBag.id,$(this).prop('name'));
+            }
+
+        });
+
+
+
+    }
+    );
+
+    function affecter(idc, idl) {
+        debugger;
+        $.ajax({
+            async: true,
+            type: 'POST',
+            dataType: 'JSON',
+            contentType: 'application/json;charset=utf-8',
+            url: '/DeliveryMan/AffecterCommandeLivreur/',
+            data: JSON.stringify({
+                idCommande: idc,
+                idLivreur: idl
+
+
+            })
+            ,
+            success: function (data) {
+                debugger;
+                location.replace("https://localhost:44304/DeliveryMan/CommandeByDeliveryMan/" + idl)
+
+            },
+            error: function (err) {
+
+                alert(err + "un erreur a été survenu veuillez contactez votre administrateur ");
+            }
+
+
+        })
+    }
+</script>
+
+<h2>Recherche Optimisée  </h2>
+
+<h4> <svg xmlns="http://www.w3.org/2000/svg" color="green" width="30" height="30" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
     <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z" />
 </svg>
+    liste des livreur proposé pour livrer la commande : @ViewBag.refer</h4>
+<div>
+    <hr />
+    <a class="btn btn-default" style="float:right;background-color:bisque" href="https://localhost:44304/DeliveryMan/AffecterLivreur/@ViewBag.id?cp=@ViewBag.cp&refer=@ViewBag.refer" role="button">Annuler la Recherche [X]</a>
 
-<table class="table">
-    <tr>
-
-        <th>
-            @Html.DisplayNameFor(model => model.firstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.lastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.adresse)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.codePostal)
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-        <tr>
-
-            <td>
-                @Html.DisplayFor(modelItem => item.firstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.lastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.adresse)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.codePostal)
-            </td>
-            <td>
+</div>
 
 
-                <!--@Html.ActionLink("Ajouter", "Create")-->
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" color="blue" class="bi bi-cursor-fill" viewBox="0 0 16 16">
-                    <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z" />
-                </svg>
-                @Html.ActionLink("Affecter a un livreur", "AffecterLivreur", new { idLivreur = item.id, cId = ViewBag.id })
 
-            </td>
+
+
+
+@if (Model != null)
+{
+    <table class="table">
+        <tr class="bg-info">
+
+            <th>
+                @Html.DisplayNameFor(model => model.firstName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.lastName)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.adresse)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.codePostal)
+            </th>
+            <th></th>
         </tr>
-    }
 
-</table>
+        @foreach (var item in Model)
+        {
 
-<p>
-    <span>
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-left-circle-fill" viewBox="0 0 16 16">
-            <path d="M8 0a8 8 0 1 0 0 16A8 8 0 0 0 8 0zm3.5 7.5a.5.5 0 0 1 0 1H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5z" />
-        </svg>
-        @Html.ActionLink("Liste des Livreurs", "AffecterLivreur", new { id = ViewBag.id, cp = ViewBag.cp, refer = ViewBag.refer })
-    </span>
+            <tr >
 
-</p>
+                <td>
+                    @Html.DisplayFor(modelItem => item.firstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.lastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.adresse)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.codePostal)
+                </td>
+                <td>
+
+                    <button class="btn btn-info" role="button" id="affectButton" name=@item.id>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" color="blue" class="bi bi-cursor-fill" viewBox="0 0 16 16">
+                            <path d="M14.082 2.182a.5.5 0 0 1 .103.557L8.528 15.467a.5.5 0 0 1-.917-.007L5.57 10.694.803 8.652a.5.5 0 0 1-.006-.916l12.728-5.657a.5.5 0 0 1 .556.103z" />
+                        </svg>
+
+                    </button>
+
+                </td>
+            </tr>
+        }
+
+    </table>
+}
+else
+{
+    <table class="table-bordered">
+        <tr class="bg-info">
+          
+            <td style="background-color:lightgray" class="bg-info"><p style="color:floralwhite;font-weight:bolder"> Le système n'a pas trouvé de livreurs appropriés pour cette livraison, veuillez choisir manuellement.</p> </td>
+            
+        </tr>
+    </table>
+}
+
