--- a/Frontend-PI/Views/Shared/_Layout.cshtml
+++ b/Frontend-PI/Views/Shared/_Layout.cshtml
@@ -66,6 +66,12 @@
                         <li>
                             <a href="/Stock/Index">Stock Manager</a>
                         </li>
+                        <li>
+                            <a href="/Product/statNombreProductByCategory">Stats of Categories</a>
+                        </li>
+                        <li>
+                            <a href="/Product/statProductsByStock">Stats Product In Stock</a>
+                        </li>
                     </ul>
                 </li>
 
