--- a/Frontend-PI/Views/Publication/Index.cshtml
+++ b/Frontend-PI/Views/Publication/Index.cshtml
@@ -51,7 +51,7 @@
                                     {
                                         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                             <article class="tg-post">
-                                                <figure><a href=#><img src="@Html.DisplayFor(modelItem => item.image)" alt="image description"></a></figure>
+                                                <figure><a href=#><img src="@Html.DisplayFor(modelItem => item.image)" width="200" height="300" alt="image description"></a></figure>
                                                 <div class="tg-postcontent">
                                                     <ul class="tg-bookscategories">
                                                         <li><a href="javascript:void(0);">Books</a></li>
