--- a/Frontend-PI/Views/Publication/Create.cshtml
+++ b/Frontend-PI/Views/Publication/Create.cshtml
@@ -36,8 +36,8 @@
     <div class="form-group">
         @Html.LabelFor(model => model.image, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.TextBox("file", "", new { type = "file" })
-            @Html.ValidationMessageFor(model => model.image, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.image, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.content, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="form-group">
