--- a/Frontend-PI/Views/Publication/IndexAdmin.cshtml
+++ b/Frontend-PI/Views/Publication/IndexAdmin.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "IndexAdmin";
 }
 
-<h2>IndexAdmin</h2>
+<h2>List of Unvalidated Publications</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -59,9 +59,9 @@
             @Html.DisplayFor(modelItem => item.title)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.id }) |
-            @Html.ActionLink("Details", "DetailsAdmin", new { id=item.id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.id })
+            <div class="btn btn-info"> @Html.ActionLink("Edit", "Edit", new { id = item.id }) </div> |
+            <div class="btn btn-success"> @Html.ActionLink("Details", "DetailsAdmin", new { id = item.id })  </div>|
+            <div class="btn btn-danger"> @Html.ActionLink("Delete", "Delete", new { id = item.id })  </div>
         </td>
     </tr>
 }
